# decision-transformer-gtrxl

./: .gitignore  README.md  requirements.txt
configs/: dt_gtrxl_wm.yaml  smoke_test.yaml
cpp/: CMakeLists.txt  README.md  bindings.cpp  env_fast.cpp  env_fast.h  setup.py
scripts/: collect_trajectories.py
src/: dataset.py  env.py  eval.py  gtrxl.py  model.py  train.py
